xdx (0.4) unstable; urgency=low

  * A URL in the chat window will now appear blue and underlined when your
    mouse is over it. Clicking on it will open the link in mozilla.
  * Fix saving of position, size of the main window and columnwidths.
  * Support for smileys (:) :-) ;) ;-) :( :-() in the chatwindow.

 -- Joop Stakenborg <pa3aba@debian.org>  Mon,  1 Sep 2003 14:19:36 +0200

xdx (0.3) unstable; urgency=low

  * Allow the main window to shrink.
  * Add command line history.
  * Save size and position of the main window.
  * Save widths of the columns in the top pane.
  * Minor bugfixes and major rewrites.

 -- Joop Stakenborg <pa3aba@debian.org>  Fri,  6 Dec 2002 11:59:06 +0100

xdx (0.2.1) unstable; urgency=low

  * A fix for gcc v3 compilers. Thanks to Han Sytsma, PE1FAM and Bartek Wiacek,
    SP5QWB for reporting.

 -- Joop Stakenborg <pa3aba@debian.org>  Sun, 17 Nov 2002 21:15:11 +0100

xdx (0.2) unstable; urgency=low

  * Fixed a scrolling bug for the text widget.
  * Set the g_io_channel encoding to binary to support the many different
    languages used on the cluster, utf8 encoding would cause iconv failures
    on receiving a message, which lead to disconnects.
  * Some work on the about box.
  * The statusbar is cleared after 30 seconds.
  * French translations by Jean-Luc Coulon <jean-luc.coulon at wanadoo.fr>.
  * Provide rpm packages.
  * Fixed some memory leaks with memprof.
  * Some code rewrites.
  * Debian: do not create symlinks to /usr/doc (lintian).

 -- Joop Stakenborg <pa3aba@debian.org>  Fri, 30 Aug 2002 13:28:00 +0200

xdx (0.1) unstable; urgency=low

  * First public release. 

 -- Joop Stakenborg <pa3aba@debian.org>  Wed, 20 Aug 2002 10:24:08 +0100